--- a/p03.树莓派开发/树莓派入门教程.md
+++ b/p03.树莓派开发/树莓派入门教程.md
@@ -68,7 +68,7 @@ http://www.putty.ws/
 
 在这里填入刚才记录下的ip地址，端口22，连接方式选择SSH，点击Open即可
 
-![](https://wsine.cn-gd.ufileos.com/image/wsine-blog-image447.jpg)
+![](/images/wsine-blog-image447.jpg)
 
 树莓派默认账号：pi
 树莓派默认密码：raspberry
